// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Tests should render Continent Card 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="continent-card"
      >
        <div
          class="continent-img"
        >
          <img
            alt="Africa Map"
            src="africa.png"
          />
        </div>
        <h2
          class="continent-name"
        >
          Africa
        </h2>
        <p
          class="continent-p"
        >
          <span>
            Total Cases
          </span>
          <span
            style="font-size: 1.2rem; font-weight: bold;"
          >
            0
          </span>
        </p>
        <a
          class="continent-btn"
          href="/continent/Africa"
        >
          View Details
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="continent-card"
    >
      <div
        class="continent-img"
      >
        <img
          alt="Africa Map"
          src="africa.png"
        />
      </div>
      <h2
        class="continent-name"
      >
        Africa
      </h2>
      <p
        class="continent-p"
      >
        <span>
          Total Cases
        </span>
        <span
          style="font-size: 1.2rem; font-weight: bold;"
        >
          0
        </span>
      </p>
      <a
        class="continent-btn"
        href="/continent/Africa"
      >
        View Details
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI Tests should render Dashboard 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dashboard"
      >
        <div
          class="continent-card"
        >
          <div
            class="continent-img"
          >
            <img
              alt="Africa Map"
              src="africa.png"
            />
          </div>
          <h2
            class="continent-name"
          >
            Africa
          </h2>
          <p
            class="continent-p"
          >
            <span>
              Total Cases
            </span>
            <span
              style="font-size: 1.2rem; font-weight: bold;"
            >
              0
            </span>
          </p>
          <a
            class="continent-btn"
            href="/continent/Africa"
          >
            View Details
          </a>
        </div>
        <div
          class="continent-card"
        >
          <div
            class="continent-img"
          >
            <img
              alt="Africa Map"
              src="europe.png"
            />
          </div>
          <h2
            class="continent-name"
          >
            Europe
          </h2>
          <p
            class="continent-p"
          >
            <span>
              Total Cases
            </span>
            <span
              style="font-size: 1.2rem; font-weight: bold;"
            >
              0
            </span>
          </p>
          <a
            class="continent-btn"
            href="/continent/Europe"
          >
            View Details
          </a>
        </div>
        <div
          class="continent-card"
        >
          <div
            class="continent-img"
          >
            <img
              alt="Africa Map"
              src="north-america.png"
            />
          </div>
          <h2
            class="continent-name"
          >
            North-America
          </h2>
          <p
            class="continent-p"
          >
            <span>
              Total Cases
            </span>
            <span
              style="font-size: 1.2rem; font-weight: bold;"
            >
              0
            </span>
          </p>
          <a
            class="continent-btn"
            href="/continent/North-America"
          >
            View Details
          </a>
        </div>
        <div
          class="continent-card"
        >
          <div
            class="continent-img"
          >
            <img
              alt="Africa Map"
              src="australia.png"
            />
          </div>
          <h2
            class="continent-name"
          >
            Oceania
          </h2>
          <p
            class="continent-p"
          >
            <span>
              Total Cases
            </span>
            <span
              style="font-size: 1.2rem; font-weight: bold;"
            >
              0
            </span>
          </p>
          <a
            class="continent-btn"
            href="/continent/Oceania"
          >
            View Details
          </a>
        </div>
        <div
          class="continent-card"
        >
          <div
            class="continent-img"
          >
            <img
              alt="Africa Map"
              src="asia.png"
            />
          </div>
          <h2
            class="continent-name"
          >
            Asia
          </h2>
          <p
            class="continent-p"
          >
            <span>
              Total Cases
            </span>
            <span
              style="font-size: 1.2rem; font-weight: bold;"
            >
              0
            </span>
          </p>
          <a
            class="continent-btn"
            href="/continent/Asia"
          >
            View Details
          </a>
        </div>
        <div
          class="continent-card"
        >
          <div
            class="continent-img"
          >
            <img
              alt="Africa Map"
              src="south-america.png"
            />
          </div>
          <h2
            class="continent-name"
          >
            South-America
          </h2>
          <p
            class="continent-p"
          >
            <span>
              Total Cases
            </span>
            <span
              style="font-size: 1.2rem; font-weight: bold;"
            >
              0
            </span>
          </p>
          <a
            class="continent-btn"
            href="/continent/South-America"
          >
            View Details
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dashboard"
    >
      <div
        class="continent-card"
      >
        <div
          class="continent-img"
        >
          <img
            alt="Africa Map"
            src="africa.png"
          />
        </div>
        <h2
          class="continent-name"
        >
          Africa
        </h2>
        <p
          class="continent-p"
        >
          <span>
            Total Cases
          </span>
          <span
            style="font-size: 1.2rem; font-weight: bold;"
          >
            0
          </span>
        </p>
        <a
          class="continent-btn"
          href="/continent/Africa"
        >
          View Details
        </a>
      </div>
      <div
        class="continent-card"
      >
        <div
          class="continent-img"
        >
          <img
            alt="Africa Map"
            src="europe.png"
          />
        </div>
        <h2
          class="continent-name"
        >
          Europe
        </h2>
        <p
          class="continent-p"
        >
          <span>
            Total Cases
          </span>
          <span
            style="font-size: 1.2rem; font-weight: bold;"
          >
            0
          </span>
        </p>
        <a
          class="continent-btn"
          href="/continent/Europe"
        >
          View Details
        </a>
      </div>
      <div
        class="continent-card"
      >
        <div
          class="continent-img"
        >
          <img
            alt="Africa Map"
            src="north-america.png"
          />
        </div>
        <h2
          class="continent-name"
        >
          North-America
        </h2>
        <p
          class="continent-p"
        >
          <span>
            Total Cases
          </span>
          <span
            style="font-size: 1.2rem; font-weight: bold;"
          >
            0
          </span>
        </p>
        <a
          class="continent-btn"
          href="/continent/North-America"
        >
          View Details
        </a>
      </div>
      <div
        class="continent-card"
      >
        <div
          class="continent-img"
        >
          <img
            alt="Africa Map"
            src="australia.png"
          />
        </div>
        <h2
          class="continent-name"
        >
          Oceania
        </h2>
        <p
          class="continent-p"
        >
          <span>
            Total Cases
          </span>
          <span
            style="font-size: 1.2rem; font-weight: bold;"
          >
            0
          </span>
        </p>
        <a
          class="continent-btn"
          href="/continent/Oceania"
        >
          View Details
        </a>
      </div>
      <div
        class="continent-card"
      >
        <div
          class="continent-img"
        >
          <img
            alt="Africa Map"
            src="asia.png"
          />
        </div>
        <h2
          class="continent-name"
        >
          Asia
        </h2>
        <p
          class="continent-p"
        >
          <span>
            Total Cases
          </span>
          <span
            style="font-size: 1.2rem; font-weight: bold;"
          >
            0
          </span>
        </p>
        <a
          class="continent-btn"
          href="/continent/Asia"
        >
          View Details
        </a>
      </div>
      <div
        class="continent-card"
      >
        <div
          class="continent-img"
        >
          <img
            alt="Africa Map"
            src="south-america.png"
          />
        </div>
        <h2
          class="continent-name"
        >
          South-America
        </h2>
        <p
          class="continent-p"
        >
          <span>
            Total Cases
          </span>
          <span
            style="font-size: 1.2rem; font-weight: bold;"
          >
            0
          </span>
        </p>
        <a
          class="continent-btn"
          href="/continent/South-America"
        >
          View Details
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI Tests should render Details Page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="details"
      >
        <div
          class="continent-map"
        >
          <img
            alt="undefined Map"
            src="south-america.png"
          />
        </div>
        <h3
          class="detail-name"
        />
        <p
          class="detail-total"
        >
          Total Cases
          <span>
             : 
          </span>
        </p>
        <table
          class="detail-table"
        >
          <thead>
            <tr>
              <th>
                Country
              </th>
              <th>
                Total Cases
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="details"
    >
      <div
        class="continent-map"
      >
        <img
          alt="undefined Map"
          src="south-america.png"
        />
      </div>
      <h3
        class="detail-name"
      />
      <p
        class="detail-total"
      >
        Total Cases
        <span>
           : 
        </span>
      </p>
      <table
        class="detail-table"
      >
        <thead>
          <tr>
            <th>
              Country
            </th>
            <th>
              Total Cases
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
